contrib/cnd.modelimpl/test/unit/data/goldenfiles/org/netbeans/modules/cnd/modelimpl/trace/FileModelTest/error_directive.cc.clank.err
${origin}/error_directive.cc:8:5: error: "qwe"	
#                       error "qwe"     
                        ^
